splunk/service.yml
apiVersion: v1
kind: Service
metadata:
  name: splunk-svc
spec:
  ports:
  - port: 8088
    targetPort: 8088
    protocol: TCP
    name: splunk-api-port
  - port: 8089
    targetPort: 8089
    protocol: TCP
    name: splunk-hec-port
  selector:
    app: splunk
