splunk/tcp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: splunk-tcp-svc
spec:
  ports:
  - port: 1514
    targetPort: 1514
    protocol: TCP
    name: splunk-tcp-port
  selector:
    app: splunk
