splunk/tcp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: splunk-tcp-ingress
  namespace: default
spec:
  rules:
  - host: splunktcp.antinex.com
    http:
      paths:
      - path: /
        backend:
          serviceName: splunk-tcp-svc
          servicePort: 1514
