splunk/web-ingress-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: splunk-web-ingress
  namespace: default
  annotations:
    nginx.org/redirect-to-https: True
spec:
  tls:
  - hosts:
    - splunk.example.com
    secretName: tls-splunk
  rules:
  - host: splunk.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: splunk-web-svc
          servicePort: 8000
