splunk/web-ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: splunk-web-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-issuer"
spec:
  tls:
  - hosts:
    - splunk.example.com
    secretName: splunk.example.com-tls
  rules:
  - host: splunk.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: splunk-web-svc
          servicePort: 8000
